--- a/user-settings.html
+++ b/user-settings.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
-<!--
-    Name: Youplay - Game Template based on Bootstrap
-    Version: 3.3.2
-    Author: nK
-    Website: https://nkdev.info/
-    Purchase: https://1.envato.market/youplayhtmlinfo
-    Support: https://nk.ticksy.com/
-    License: You must have a valid license purchased only from ThemeForest (the above link) in order to legally use the theme for your project.
-    Copyright 2020.
--->
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Youplay | User Settings</title>
-        <meta name="description" content="Youplay - Gaming HTML Template based on Bootstrap">
+        <meta name="description" content="Casual Friendly Gaming">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
-        <meta name="author" content="nK">
+        <meta name="author" content="ClassicCaleb">
         <link rel="icon" type="image/png" href="assets/images/dark/icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- START: Styles -->
@@ -77,17 +67,6 @@
                                 <span class="label">games</span>
                             </a>
                             <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="store-1.html"> Store Style 1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="store-2.html"> Store Style 2 </a>
-                                    </li>
-                                    <li>
-                                        <a href="cart.html"> Cart </a>
-                                    </li>
-                                </ul>
                                 <ul role="menu">
                                     <li>
                                         <a href="store-product-1.html"> Product Style1 </a>
