--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Youplay | Gaming HTML Template</title>
-        <meta name="description" content="Youplay - Gaming HTML Template based on Bootstrap">
+        <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="nK">
         <link rel="icon" type="image/png" href="assets/images/dark/icon.png">
@@ -63,33 +63,9 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class=" dropdown dropdown-hover">
-                            <a href="store-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Store <span class="caret"></span>
-                                <span class="label">games</span>
+                            <a href="store-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Clips <span class="caret"></span>
+                                <span class="label">Youtube</span>
                             </a>
-                            <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="store-1.html"> Store Style 1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="store-2.html"> Store Style 2 </a>
-                                    </li>
-                                    <li>
-                                        <a href="cart.html"> Cart </a>
-                                    </li>
-                                </ul>
-                                <ul role="menu">
-                                    <li>
-                                        <a href="store-product-1.html"> Product Style1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="store-product-2.html"> Product Style 2 </a>
-                                    </li>
-                                    <li>
-                                        <a href="checkout.html"> Checkout </a>
-                                    </li>
-                                </ul>
-                            </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
                             <a href="blog-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Blog <span class="caret"></span>
