--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Youplay | Gaming HTML Template</title>
+        <title>ClassicCaleb | Casual Friendly Gaming and Tech</title>
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="nK">
