--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class=" dropdown dropdown-hover">
-                            <a href="store-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Clips <span class="caret"></span>
-                                <span class="label">Youtube</span>
+                            <a href="commands.html"> Clips <span class="label"></span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
