--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class=" dropdown dropdown-hover">
-                            <a href="commands.html"> Clips <span class="label"></span>
+                            <a href="https://u.pcloud.link/publink/show?code=kZrCrzXZhdGpSsrmObLzAJ97PbAxsVzx86FV"> Clips <span class="label"></span>
+                                <span class="label">plays</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
