--- a/index.html
+++ b/index.html
@@ -97,58 +97,9 @@
                             </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="components.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Features <span class="caret"></span>
-                                <span class="label">full list</span>
+                            <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="caret"></span>
+                                <span class="label">parts</span>
                             </a>
-                            <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="forums.html"> Forums </a>
-                                    </li>
-                                    <li>
-                                        <a href="forums-topics.html"> Forums Topics </a>
-                                    </li>
-                                    <li>
-                                        <a href="forums-single-topic.html"> Forums Single Topic </a>
-                                    </li>
-                                    <li>
-                                        <a href="matches-list.html"> Matches List </a>
-                                    </li>
-                                    <li>
-                                        <a href="match.html"> Match </a>
-                                    </li>
-                                    <li>
-                                        <a href="match-2.html"> Match with Maps </a>
-                                    </li>
-                                    <li>
-                                        <a href="login.html"> Login </a>
-                                    </li>
-                                </ul>
-                                <ul role="menu">
-                                    <li>
-                                        <a href="widgets.html"> Widgets <span class="badge bg-default">New</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="components.html"> Components </a>
-                                    </li>
-                                    <li>
-                                        <a href="coming-soon.html"> Coming Soon </a>
-                                    </li>
-                                    <li>
-                                        <a href="contact.html"> Contact Us </a>
-                                    </li>
-                                    <li>
-                                        <a href="search.html"> Search </a>
-                                    </li>
-                                    <li>
-                                        <a href="404.html"> 404 </a>
-                                    </li>
-                                    <li>
-                                        <a href="blank.html"> Blank </a>
-                                    </li>
-                                </ul>
-                            </div>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
