--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="caret"></span>
+                            <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="label"></span>
                                 <span class="label">parts</span>
                             </a>
                         </li>
