--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-8">
-                                    <h1 class="h1">Youplay - Gaming Template</h1>
-                                    <p class="lead"> You are not limited to the features of this template. It is suitable for gaming site, and for any business project. Pre-packed demos will help you to quickly run your new creative website. </p>
+                                    <h1 class="h1">Casual Friendly Gaming and Tech</h1>
+                                    <p class="lead"> I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together. We share knowledge with one another and make each other better at both gaming and tech. Everyone that is capable of showing respect to others is welcome! </p>
                                     <br>
                                     <a class="btn btn-md active" href="#demo"><i class="fa fa-eye"></i>&nbsp; Demo</a><a class="btn btn-md" href="https://1.envato.market/youplayhtmlinfo"><i class="fa fa-shopping-cart"></i>&nbsp; Purchase</a>
                                 </div>
