--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                     <h1 class="h1">Casual Friendly Gaming and Tech</h1>
                                     <p class="lead"> I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together. We share knowledge with one another and make each other better at both gaming and tech. Everyone that is capable of showing respect to others is welcome! </p>
                                     <br>
-                                    <a class="btn btn-md active" href="#demo"><i class="fa fa-eye"></i>&nbsp; Demo</a><a class="btn btn-md" href="https://1.envato.market/youplayhtmlinfo"><i class="fa fa-shopping-cart"></i>&nbsp; Purchase</a>
+                                    <a class="btn btn-info active" href="#schedule"><i class="fa fa-calendar"></i>&nbsp; Schedule</a>
                                 </div>
                             </div>
                         </div>
@@ -230,12 +230,12 @@
                 <div class="info">
                     <div>
                         <div class="container">
-                            <h2 class="fs-40 mt-45">A Bit More Features</h2>
+                            <h2 class="fs-40 mt-45" id="schedule">Stream Schedule</h2>
                             <br>
                             <div class="youplay-features">
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-exclamation-triangle"></i>
+                                        <i class="fa fa-clock"></i>
                                         <h3>Clan Wars</h3>
                                         <div> Manage battles in the games. Add teams and fights. </div>
                                     </div>
@@ -249,7 +249,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-paper-plane"></i>
+                                        <i class="fa fa-clock"></i>
                                         <h3>AJAX Contact Form</h3>
                                         <div> Everyone can contact you through user friendly ajax form. </div>
                                     </div>
