--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <h1 class="h1">Casual Friendly Gaming and Tech</h1>
-                                    <p class="lead"> I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together. We share knowledge with one another and make each other better at both gaming and tech. Everyone that is capable of showing respect to others is welcome! </p>
+                                    <p class="lead"> I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together. We share knowledge with one another and make each other better at both gaming and tech. Everyone that shows respect to others is welcome! </p>
                                     <br>
                                     <a class="btn btn-info active" href="#schedule"><i class="fa fa-calendar"></i>&nbsp; Schedule</a>
                                 </div>
