--- a/index.html
+++ b/index.html
@@ -196,26 +196,18 @@
             </section>
             <!-- /Features -->
             <!-- Demo -->
-            <h2 class="text-center mt-60 fs-40" id="demo">Youplay Comes with 4 Demo</h2>
+            <h2 class="text-center mt-60 fs-40" id="demo">Two Channels</h2>
             <div class="container mt-60 mb-120">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="row vertical-gutter">
                             <div class="col-sm-6">
                                 <a href="dark-index.html" target="_blank"><img src="assets/images/demo-dark.jpg" alt=""></a>
-                                <h4 class="text-center mt-20">Dark <small>demo</small></h4>
+                                <h4 class="text-center mt-20">Streaming</h4>
                             </div>
                             <div class="col-sm-6">
                                 <a href="shooter-index.html" target="_blank"><img src="assets/images/demo-shooter.jpg" alt=""></a>
-                                <h4 class="text-center mt-20">Shooter <small>demo</small></h4>
-                            </div>
-                            <div class="col-sm-6">
-                                <a href="anime-index.html" target="_blank"><img src="assets/images/demo-anime.jpg" alt=""></a>
-                                <h4 class="text-center mt-20">Anime <small>demo</small></h4>
-                            </div>
-                            <div class="col-sm-6">
-                                <a href="light-index.html" target="_blank"><img src="assets/images/demo-light.jpg" alt=""></a>
-                                <h4 class="text-center mt-20">Light <small>demo</small></h4>
+                                <h4 class="text-center mt-20">Videos</h4>
                             </div>
                         </div>
                     </div>
