--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div class="row vertical-gutter">
                             <div class="col-sm-6">
-                                <a href="dark-index.html" target="_blank"><img src="assets/images/demo-dark.jpg" alt=""></a>
+                                <a href="dark-index.html" target="_blank"><img src="assets/images/ccPLAYS300.png" alt=""></a>
                                 <h4 class="text-center mt-20">Streaming</h4>
                             </div>
                             <div class="col-sm-6">
-                                <a href="shooter-index.html" target="_blank"><img src="assets/images/demo-shooter.jpg" alt=""></a>
+                                <a href="shooter-index.html" target="_blank"><img src="assets/images/ccSTREAMTECH300.png" alt=""></a>
                                 <h4 class="text-center mt-20">Videos</h4>
                             </div>
                         </div>
