--- a/index.html
+++ b/index.html
@@ -196,18 +196,15 @@
             </section>
             <!-- /Features -->
             <!-- Demo -->
-            <h2 class="text-center mt-60 fs-40" id="demo">Two Channels</h2>
             <div class="container mt-60 mb-120">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="row vertical-gutter">
                             <div class="col-sm-6">
-                                <a href="dark-index.html" target="_blank"><img src="assets/images/ccPLAYS300.png" alt=""></a>
-                                <h4 class="text-center mt-20">Streaming</h4>
+                                <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" target="_blank"><img src="assets/images/ccPLAYS300.png" alt=""></a>
                             </div>
                             <div class="col-sm-6">
-                                <a href="shooter-index.html" target="_blank"><img src="assets/images/ccSTREAMTECH300.png" alt=""></a>
-                                <h4 class="text-center mt-20">Videos</h4>
+                                <a href="https://www.youtube.com/channel/UCAmwh0HLg-1K3isUA02RYqw" target="_blank"><img src="assets/images/ccSTREAMTECH300.png" alt=""></a>
                             </div>
                         </div>
                     </div>
