--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
             <section class="youplay-features container mt-60 mb-30">
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
-                        <i class="fa fa-rss"></i>
-                        <h3>Blog</h3>
-                        <div> Youplay can be used for simple blogging, not only full-stack gaming template. </div>
+                        <i class="fa fa-youtube-play"></i>
+                        <h3>Youtube</h3>
+                        <div> Two Youtube channels! Streaming on ClassicCaleb Plays, tech videos on Stream Tech! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
