--- a/index.html
+++ b/index.html
@@ -181,16 +181,16 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
-                        <i class="fa fa-shopping-cart"></i>
-                        <h3>Store</h3>
-                        <div> If you want to sale goods, let's do it. This is so easy with Youplay. </div>
+                        <i class="fa fa-users"></i>
+                        <h3>Community</h3>
+                        <div> We game together and play with viewers in a casual setting! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
-                        <i class="fa fa-users"></i>
-                        <h3>Social Network</h3>
-                        <div> Build your gaming social network, or forum for Clan members. </div>
+                        <i class="fa fa-desktop"></i>
+                        <h3>Tech</h3>
+                        <div> Straight to the point streaming tech tutorials and information! </div>
                     </div>
                 </div>
             </section>
