--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="feature angled-bg">
                         <i class="fa fa-youtube-play"></i>
                         <h3>Youtube</h3>
-                        <div> Two Youtube channels! Streaming on ClassicCaleb Plays, tech videos on Stream Tech! </div>
+                        <div> Two channels! Streaming on ClassicCaleb Plays, tech videos on Stream Tech! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
