--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Clan Wars</h3>
-                                        <div> Manage battles in the games. Add teams and fights. </div>
+                                        <h2>Thursday</h2>
+                                        <h3>Division 2</h3>
+                                        <div> November 19 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
