--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h2>Thursday</h2>
                                         <h3>Division 2</h3>
-                                        <div> November 19 </div>
+                                        <h3>05:00 CST</h3>
+                                        <div> Thursday, November 19 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
