--- a/index.html
+++ b/index.html
@@ -233,15 +233,18 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Coming Soon</h3>
-                                        <div> Use coming soon page with countdown before release feature or service. </div>
+                                        <h3>Division 2</h3>
+                                        <h3>05:00 CST</h3>
+                                        <div> Friday, Novemeber 20 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>AJAX Contact Form</h3>
-                                        <div> Everyone can contact you through user friendly ajax form. </div>
+                                        <h3>Fallout 76</h3>
+                                        <h3>Division 2</h3>
+                                        <h3>08:00</h3>
+                                        <div> Weekend, November 21-22 </div>
                                     </div>
                                 </div>
                             </div>
