--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Fallout 76</h3>
-                                        <h3>Division 2</h3>
+                                        <h3>Division 2 & Fallout 76</h3>
                                         <h3>08:00</h3>
                                         <div> Weekend, November 21-22 </div>
                                     </div>
