--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
                                         <h3>Division 2 & Fallout 76</h3>
-                                        <h3>08:00</h3>
+                                        <h3>08:00 CST</h3>
                                         <div> Weekend, November 21-22 </div>
                                     </div>
                                 </div>
@@ -270,10 +270,10 @@
                 </div>
                 <div class="info container align-center">
                     <div>
-                        <h2>Purchase Today for $23</h2>
-                        <em class="date">If you interested in WordPress version, see it here - <a href="https://1.envato.market/youplayhtmlinfo">https://themeforest.net/item/youplay-gaming-wordpress-theme/11959042</a></em>
+                        <h2>Thanks for your support!</h2>
+                        <em class="date">Tips are never expected, but on rare occassions generous people ask me for a link.</a></em>
                         <br><br><br><br>
-                        <a class="btn btn-lg" href="https://1.envato.market/youplayhtmlinfo">Purchase</a>
+                        <a class="btn btn-info" href="https://">Tip</a>
                     </div>
                 </div>
             </section>
