--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h2 class="fs-40 mt-0">Have Any Questions?</h2>
-                        <p class="lead">Youplay comes with documentation. See it here - <a href="https://nkdev.info/docs/youplay-html/" target="_blank">https://nkdev.info/docs/youplay-html/</a></p>
-                        <p class="lead">Also we provide support for our users through ticket system - <a href="https://nk.ticksy.com/" target="_blank">https://nk.ticksy.com/</a></p>
+                        <p class="lead">Hop in our Discord! Link here-<a href="https://discord.gg/GMTGJwX" target="_blank">https://discord.gg/GMTGJwX</a></p>
+                        <p class="lead">We offer a friendly gaming community, tech support with your stream issues, and we're easy on your notifications! </a></p>
                     </div>
                 </div>
             </section>
@@ -271,7 +271,7 @@
                 <div class="info container align-center">
                     <div>
                         <h2>Thanks for your support!</h2>
-                        <em class="date">Tips are never expected, but on rare occassions generous people ask me for a link.</a></em>
+                        <em class="date">Tips are never expected, but on rare occasions generous people ask me for a link.</a></em>
                         <br><br><br><br>
                         <a class="btn btn-info" href="https://">Tip</a>
                     </div>
