--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                         <h2 class="fs-40 mt-0">Have Any Questions?</h2>
                         <p class="lead">Hop in our Discord! Link here-<a href="https://discord.gg/GMTGJwX" target="_blank">https://discord.gg/GMTGJwX</a></p>
                         <p class="lead">We offer a friendly gaming community, tech support with your stream issues, and we're easy on your notifications! </a></p>
+                <iframe src="https://discord.com/widget?id=517090361865273386&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                     </div>
                 </div>
             </section>
