--- a/index.html
+++ b/index.html
@@ -291,25 +291,25 @@
                             <h3>Connect socially with <strong>Youplay</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
-                                    <a href="#">
+                                    <a href="https://discord.gg/GMTGJwX">
                                         <i class="fab fa-discord"></i>
-                                        <span>Subscribe to Discord</span>
+                                        <span>On Discord</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
-                                    <a href="#">
-                                        <i class="fab fa-twitch"></i>
-                                        <span>Watch on Twitch</span>
-                                    </a>
-                                </div>
-                                <div class="social-icon">
-                                    <a href="#">
+                                    <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">
                                         <i class="fab fa-youtube"></i>
-                                        <span>Watch on Youtube</span>
+                                        <span>Streams on youtube</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
-                                    <a href="#">
+                                    <a href="https://www.youtube.com/channel/UCAmwh0HLg-1K3isUA02RYqw">
+                                        <i class="fab fa-youtube"></i>
+                                        <span>Videos on Youtube</span>
+                                    </a>
+                                </div>
+                                <div class="social-icon">
+                                    <a href="https://twitter.com/ClassicCalebTV">
                                         <i class="fab fa-twitter-square"></i>
                                         <span>Follow on Twitter</span>
                                     </a>
@@ -321,7 +321,7 @@
                     <!-- Copyright -->
                     <div class="copyright">
                         <div class="container">
-                            <p>2020 &copy; <strong>nK</strong>. All rights reserved</p>
+                            <p>2020 &copy; <strong>ClassicCaleb</strong>. All rights reserved</p>
                         </div>
                     </div>
                     <!-- /Copyright -->
