--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
             <section class="container mt-120">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h2 class="fs-40 mt-0">Have Any Questions?</h2>
                         <div class="col-sm-6">
-                        <p class="lead">Hop in our Discord! Link here-<a href="https://discord.gg/GMTGJwX" target="_blank">https://discord.gg/GMTGJwX</a></p>
+                        <h2 class="fs-40 mt-0">Have Any Questions?</h2>
+                        <p class="lead">Hop in our Discord for a friendly community to game with or for technical support for streaming!</p>
                         </div>
                         <div class="col-sm-6">
                 <iframe src="https://discord.com/widget?id=517090361865273386&theme=dark" width="350" height="350" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
