--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="col-xs-12">
                         <div class="col-sm-6">
                         <h2 class="fs-40 mt-0">Have Any Questions?</h2>
-                        <p class="lead">Hop in our Discord for a friendly community to game with or for technical support for streaming!</p>
+                        <p class="lead">Hop in our Discord for a friendly community to game with or for technical support for streaming! Streamers automatically show at the top of our member list while they are live.</p>
                         </div>
                         <div class="col-sm-6">
                 <iframe src="https://discord.com/widget?id=517090361865273386&theme=dark" width="300" height="300" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
