--- a/index.html
+++ b/index.html
@@ -196,19 +196,18 @@
             
             <!-- /Features -->
             <!-- Demo -->
-    <!--         <div class="container mt-60 mb-120">
+             <div class="container mt-60 mb-120">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="row vertical-gutter">
-                            <div class="col-sm-6"> -->
-            <div class="col-sm-4">
-                    <div class="feature angled-bg">
+                            <div class="col-sm-6">
                                 <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" target="_blank"><img src="assets/images/ccPLAYS300.png" alt=""></a>
                             </div>
-                </section>
+ 
                             <div class="col-sm-6">
                                 <a href="https://www.youtube.com/channel/UCAmwh0HLg-1K3isUA02RYqw" target="_blank"><img src="assets/images/ccSTREAMTECH300.png" alt=""></a>
                             </div>
+                                           </section>
                         </div>
                     </div>
                 </div>
