--- a/index.html
+++ b/index.html
@@ -68,32 +68,10 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="blog-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Blog <span class="caret"></span>
-                                <span class="label">news</span>
+                            <a href="commands.html"> Commands <span class="label"></span>
+                                <span class="label">bot</span>
                             </a>
                             <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="blog-1.html"> Blog Style 1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="blog-2.html"> Blog Style 2 </a>
-                                    </li>
-                                    <li>
-                                        <a href="blog-3.html"> Blog Style 3 </a>
-                                    </li>
-                                </ul>
-                                <ul role="menu">
-                                    <li>
-                                        <a href="blog-post-1.html"> Blog Post 1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="blog-post-2.html"> Blog Post 2 </a>
-                                    </li>
-                                    <li>
-                                        <a href="blog-post-3.html"> Blog Post 3 </a>
-                                    </li>
-                                </ul>
                             </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
