--- a/commands.html
+++ b/commands.html
@@ -69,7 +69,7 @@
                         </li>
                         <li class=" dropdown dropdown-hover">
                             <a href="commands.html"> Commands <span class="label"></span>
-                                <span class="label">bot</span>
+                                <span class="label">crankybot</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
