--- a/commands.html
+++ b/commands.html
@@ -184,7 +184,7 @@
                     <!-- Copyright -->
                     <div class="copyright">
                         <div class="container">
-                            <p>2020 &copy; <strong>nK</strong>. All rights reserved</p>
+                            <p>2020 &copy; <strong>ClassicCaleb</strong>. All rights reserved</p>
                         </div>
                     </div>
                     <!-- /Copyright -->
@@ -243,17 +243,3 @@
         <!-- END: Scripts -->
     </body>
 </html>
-
-    © 2020 GitHub, Inc.
-    Terms
-    Privacy
-    Security
-    Status
-    Help
-    Contact GitHub
-    Pricing
-    API
-    Training
-    Blog
-    About
-
