--- a/commands.html
+++ b/commands.html
@@ -151,28 +151,28 @@
                     <!-- Social Buttons -->
                     <div class="social">
                         <div class="container">
-                            <h3>Connect socially with <strong>Youplay</strong></h3>
+                            <h3>Connect socially with <strong>ClassicCaleb</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
-                                    <a href="#">
+                                    <a href="https://discord.gg/GMTGJwX">
                                         <i class="fab fa-discord"></i>
-                                        <span>Subscribe to Discord</span>
+                                        <span>On Discord</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
-                                    <a href="#">
-                                        <i class="fab fa-twitch"></i>
-                                        <span>Watch on Twitch</span>
-                                    </a>
-                                </div>
-                                <div class="social-icon">
-                                    <a href="#">
+                                    <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">
                                         <i class="fab fa-youtube"></i>
-                                        <span>Watch on Youtube</span>
+                                        <span>Streams on youtube</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
-                                    <a href="#">
+                                    <a href="https://www.youtube.com/channel/UCAmwh0HLg-1K3isUA02RYqw">
+                                        <i class="fab fa-youtube"></i>
+                                        <span>Videos on Youtube</span>
+                                    </a>
+                                </div>
+                                <div class="social-icon">
+                                    <a href="https://twitter.com/ClassicCalebTV">
                                         <i class="fab fa-twitter-square"></i>
                                         <span>Follow on Twitter</span>
                                     </a>
