--- a/commands.html
+++ b/commands.html
@@ -132,15 +132,25 @@
                 <div class="info">
                     <div>
                         <div class="container">
-                            <h1 class="h1">Blank Page</h1>
+                            <h1 class="h1">Stream Commands</h1>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- /Banner -->
             <section class="youplay-content container">
-                <h2 class="mt-0">Title</h2>
-                <p> Start your new page here... </p>
+                <h2 class="mt-0">Soundboard</h2>
+                <p><strong>!rogue</strong> - Division 2: Plays Rogue Agent enemy theme music (10 pts)</p>
+                <p><strong>!scorch</strong> - Fallout 76: Plays Legendary enemy theme music (10 pts)
+!esoboss - ESO: Plays ESO Boss theme music (10 pts)
+!amazing - Plays Shaxx "This is amazing!" (5 pts)
+!badumtss - Plays a comedic drum (5 pts)
+!dundundun - Plays a plot twist sound (5 pts)
+!gg - Plays OG Fallout success music (5 pts)
+!rip - Plays video game death sound (5 pts)
+!sadtrombone - Plays sad trombone music (5 pts)
+!works - Todd Howard "it just works" (5 pts)
+ </p>
             </section>
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
