--- a/commands.html
+++ b/commands.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>ClassicCaleb | Commands</title>
+        <title>ClassicCaleb | Stream Commands</title>
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="nK">
@@ -142,15 +142,14 @@
                 <h2 class="mt-0">Soundboard</h2>
                 <p><strong>!rogue</strong> - Division 2: Plays Rogue Agent enemy theme music (10 pts)</p>
                 <p><strong>!scorch</strong> - Fallout 76: Plays Legendary enemy theme music (10 pts)
-!esoboss - ESO: Plays ESO Boss theme music (10 pts)
-!amazing - Plays Shaxx "This is amazing!" (5 pts)
-!badumtss - Plays a comedic drum (5 pts)
-!dundundun - Plays a plot twist sound (5 pts)
-!gg - Plays OG Fallout success music (5 pts)
-!rip - Plays video game death sound (5 pts)
-!sadtrombone - Plays sad trombone music (5 pts)
-!works - Todd Howard "it just works" (5 pts)
- </p>
+                <p><strong>!esoboss</strong> - ESO: Plays ESO Boss theme music (10 pts)</p>
+                <p><strong>!amazing</strong> - Plays Shaxx "This is amazing!" (5 pts)</p>
+                <p><strong>!badumtss</strong> - Plays a comedic drum (5 pts)</p>
+                <p><strong>!dundundun</strong> - Plays a plot twist sound (5 pts)</p>
+                <p><strong>!gg</strong> - Plays OG Fallout success music (5 pts)</p>
+                <p><strong>!rip</strong> - Plays video game death sound (5 pts)</p>
+                <p><strong>!sadtrombone</strong> - Plays sad trombone music (5 pts)</p>
+                <p><strong>!works</strong> - Todd Howard "it just works" (5 pts)</p>
             </section>
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
