--- a/commands.html
+++ b/commands.html
@@ -139,7 +139,8 @@
             </section>
             <!-- /Banner -->
             <section class="youplay-content container">
-                <h2 class="mt-0">Soundboard</h2>
+                <div class="col-sm-6">
+                <h2 class="mt-0">Soundboard Commands</h2>
                 <p><strong>!rogue</strong> - Division 2: Plays Rogue Agent enemy theme music (10 pts)</p>
                 <p><strong>!scorch</strong> - Fallout 76: Plays Legendary enemy theme music (10 pts)
                 <p><strong>!esoboss</strong> - ESO: Plays ESO Boss theme music (10 pts)</p>
@@ -150,6 +151,19 @@
                 <p><strong>!rip</strong> - Plays video game death sound (5 pts)</p>
                 <p><strong>!sadtrombone</strong> - Plays sad trombone music (5 pts)</p>
                 <p><strong>!works</strong> - Todd Howard "it just works" (5 pts)</p>
+                </div>
+                <div class="col-sm-6">
+                <h2 class="mt-0">Regular Commands</h2>
+                <p><strong>!points</strong> - Check your points and ranking</p>
+                <p><strong>!clip</strong> - Clip the last 45 seconds</p>
+                <p><strong>!replay</strong> - replay the last clip on stream</p>
+                <p><strong>!lurk</strong> - Obligatory lurk command</p>
+                <p><strong>!schedule</strong> - My weekly game schedule</p>
+                <p><strong>!discord</strong> - Link to our Discord</p>
+                <p><strong>!bethesda</strong> - Show my Bethesda ID</p>
+                <p><strong>!steam</strong> - Show my Steam ID</p>
+                <p><strong>!uplay</strong> - Show my Ubisoft ID</p>
+                <p><strong>!origin</strong> - Show my Origin ID</p>
             </section>
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
