--- a/404.html
+++ b/404.html
@@ -135,10 +135,8 @@
                         <div class="container">
                             <div class="text-center">
                                 <h2 class="h1">404</h2>
-                                <h3>Page Not Found ;(</h3>
-                                <form action="search.html">
+                                <h3>THAT PAGE DOESN'T EXIST! WHAT HAVE YOU DONE?! It's ok, you can go back safely.</h3>
                                     <div class="youplay-input">
-                                        <input type="text" name="search" placeholder="Site Search">
                                     </div>
                                 </form>
                             </div>
