--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Youplay | 404</title>
-        <meta name="description" content="Youplay - Gaming HTML Template based on Bootstrap">
+        <title>ClassicCaleb | 404</title>
+        <meta name="description" content="ClassicCaleb - Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="nK">
         <link rel="icon" type="image/png" href="assets/images/dark/icon.png">
@@ -146,6 +146,12 @@
             </section>
             <!-- /Banner -->
             <!-- Footer -->
+            <footer class="youplay-footer youplay-footer-parallax">
+                <div class="image" data-speed="0.4" data-img-position="50% 0%">
+                    <img src="assets/images/dark/footer-bg.jpg" alt="" class="jarallax-img">
+                </div>
+                <div class="wrapper">
+                    <!-- Social Buttons -->
                     <div class="social">
                         <div class="container">
                             <h3>Connect socially with <strong>ClassicCaleb</strong></h3>
