--- a/404.html
+++ b/404.html
@@ -135,7 +135,7 @@
                         <div class="container">
                             <div class="text-center">
                                 <h2 class="h1">404</h2>
-                                <h3>THAT PAGE DOESN'T EXIST! WHAT HAVE YOU DONE?! It's ok, you can go back safely.</h3>
+                                <h3>WELL NOW YOU'VE DONE IT! It's ok, you can go back safely.</h3>
                                     <div class="youplay-input">
                                     </div>
                                 </form>
