--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <h2>Thanks for your support!</h2>
                         <em class="date">Tips are never expected, but on rare occasions generous people ask me for a link.</a></em>
                         <br><br><br><br>
-                        <a class="btn btn-info" href="https://">Tip</a>
+                        <a class="btn btn-info" href="tip.html">Tip</a>
                     </div>
                 </div>
             </section>
