--- a/tip.html
+++ b/tip.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>ClassicCaleb | 404</title>
+        <title>ClassicCaleb | Tip</title>
         <meta name="description" content="ClassicCaleb - Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="nK">
