--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>ClassicCaleb | Casual Friendly Gaming and Tech</title>
+        <meta name=”twitter:card” content=”summary” />
+        <meta name=”twitter:description” content=”Casual Friendly Gaming and Tech” />
+        <meta name=”twitter:title” content=”Hi, I'm ClassicCaleb” />
+        <meta name=”twitter:site” content=”@ClassicCalebTV” />
+        <meta name=”twitter:image” content=”https://raw.githubusercontent.com/crankycaleb/pro/master/images/yttwitcard.jpg” />
+        <meta name=”twitter:creator” content=”@ClassicCalebTV” />
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
-        <meta name="author" content="nK">
+        <meta name="author" content="ClassicCaleb">
         <link rel="icon" type="image/png" href="assets/images/dark/icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- START: Styles -->
