--- a/commands.html
+++ b/commands.html
@@ -4,6 +4,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>ClassicCaleb | Stream Commands</title>
+        <meta name=”twitter:card” content=”summary” />
+        <meta name=”twitter:description” content=”Casual Friendly Gaming and Tech” />
+        <meta name=”twitter:title” content=”Hi, I'm ClassicCaleb” />
+        <meta name=”twitter:site” content=”@ClassicCalebTV” />
+        <meta name=”twitter:image” content=”https://raw.githubusercontent.com/crankycaleb/pro/master/images/yttwitcard.jpg” />
+        <meta name=”twitter:creator” content=”@ClassicCalebTV” />
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="nK">
