--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>ClassicCaleb | Casual Friendly Gaming and Tech</title>
         <meta name=”twitter:card” content=”summary” />
-        <meta name=”twitter:description” content=”Casual Friendly Gaming and Tech” />
-        <meta name=”twitter:title” content=”Hi, I'm ClassicCaleb” />
+        <meta property="og:url" content="https://classiccaleb.pro"
+        <meta property="og:description" content=”Casual Friendly Gaming and Tech” />
+        <meta property="og:title" content=”Hi, I'm ClassicCaleb” />
         <meta name=”twitter:site” content=”@ClassicCalebTV” />
-        <meta name=”twitter:image” content=”https://raw.githubusercontent.com/crankycaleb/pro/master/images/yttwitcard.jpg” />
+        <meta property="og:image" content=”https://raw.githubusercontent.com/crankycaleb/pro/master/images/yttwitcard.jpg” />
         <meta name=”twitter:creator” content=”@ClassicCalebTV” />
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
