--- a/commands.html
+++ b/commands.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>ClassicCaleb | Stream Commands</title>
         <meta name=”twitter:card” content=”summary” />
-        <meta property="og:url" content="https://classiccaleb.pro"
+        <meta name=”twitter:site” content=”@classiccalebtv” />
+        <meta name=”twitter:creator” content=”@classiccalebtv” />
+        <meta property="og:url" content="https://classiccaleb.pro" />
         <meta property="og:description" content=”Casual Friendly Gaming and Tech” />
         <meta property="og:title" content=”Hi, I'm ClassicCaleb” />
-        <meta name=”twitter:site” content=”@ClassicCalebTV” />
         <meta property="og:image" content=”https://raw.githubusercontent.com/crankycaleb/pro/master/images/yttwitcard.jpg” />
-        <meta name=”twitter:creator” content=”@ClassicCalebTV” />
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="nK">
