--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:url" content="https://classiccaleb.pro" />
         <meta property="og:description" content=”Casual Friendly Gaming and Tech” />
         <meta property="og:title" content=”Hi, I'm ClassicCaleb” />
-        <meta property="og:image" content=”https://raw.githubusercontent.com/crankycaleb/pro/master/images/yttwitcard.jpg” />
+        <meta property="og:image" content=”https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/yttwitcard.jpg” />
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="ClassicCaleb">
