--- a/commands.html
+++ b/commands.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>ClassicCaleb | Stream Commands</title>
-        <meta name=”twitter:card” content=”summary” />
-        <meta name=”twitter:site” content=”@classiccalebtv” />
-        <meta name=”twitter:creator” content=”@classiccalebtv” />
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@classiccalebtv" />
+        <meta name="twitter:creator" content="@classiccalebtv" />
         <meta property="og:url" content="https://classiccaleb.pro" />
-        <meta property="og:description" content=”Casual Friendly Gaming and Tech” />
-        <meta property="og:title" content=”Hi, I'm ClassicCaleb” />
-        <meta property="og:image" content=”https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/yttwitcard.jpg” />
+        <meta property="og:description" content="Casual Friendly Gaming and Tech" />
+        <meta property="og:title" content="Hi, I'm ClassicCaleb" />
+        <meta property="og:image" content="https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/yttwitcard.jpg" />
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
-        <meta name="author" content="nK">
+        <meta name="author" content="ClassicCaleb">
         <link rel="icon" type="image/png" href="assets/images/dark/icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- START: Styles -->
