--- a/tip.html
+++ b/tip.html
@@ -158,13 +158,13 @@
                                 <div class="social-icon">
                                     <a href="https://discord.gg/GMTGJwX">
                                         <i class="fab fa-discord"></i>
-                                        <span>On Discord</span>
+                                        <span>Join on Discord</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
                                     <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">
                                         <i class="fab fa-youtube"></i>
-                                        <span>Streams on youtube</span>
+                                        <span>Streams on Youtube</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
